fix bug when content overflow container on about me page

--- a/styles/TextContent.module.scss
+++ b/styles/TextContent.module.scss
@@ -21,8 +21,9 @@
 
 .body {
   border-top: 1px solid $lines-color;
-  height: 100%;
+  max-height: 75vh;
   padding: 2rem;
+  overflow: scroll;
 
   & > * {
     display: flex;
